--- a/units/frakcja1/shade.cfg
+++ b/units/frakcja1/shade.cfg
@@ -3,7 +3,7 @@
 [unit_type]
 	id=WDShade
 	name= _ "Shadowling"
-	race=WDshadowborn
+	race=WDSimple_race
 	image="frakcja1/shade0.png"
 	{MAGENTA_IS_THE_TEAM_COLOR}
 	hitpoints=18
