--- a/units/frakcja1/shadow_stalker2.cfg
+++ b/units/frakcja1/shadow_stalker2.cfg
@@ -3,7 +3,7 @@
 [unit_type]
 	id=WDShadow_Stalker2
 	name= _ "Preying Shade"
-	race=WDshadowborn
+	race=WDSimple_race
 	image="frakcja1/stalker2.png"
     #halo=halo/soulstole_halo.png
 	{MAGENTA_IS_THE_TEAM_COLOR}
