--- a/units/frakcja1/shadow_stalker3.cfg
+++ b/units/frakcja1/shadow_stalker3.cfg
@@ -3,7 +3,7 @@
 [unit_type]
 	id=WDShadow_Stalker3
 	name= _ "Soul Stealer"
-	race=WDshadowborn
+	race=WDSimple_race
 	image="frakcja1/stalker3.png"
     #halo=halo/soulstole_halo2_fixed.png
 	{MAGENTA_IS_THE_TEAM_COLOR}
