--- a/units/frakcja1/warlock3.cfg
+++ b/units/frakcja1/warlock3.cfg
@@ -3,7 +3,7 @@
 [unit_type]
 	id=WDWarlock3
 	name= _ "Lord of Shadows"
-    race=WDshadowborn
+    race=WDSimple_race
     image="frakcja1/shadow_lord.png"
     {MAGENTA_IS_THE_TEAM_COLOR}
     hitpoints=67
