--- a/units/frakcja1/wraith.cfg
+++ b/units/frakcja1/wraith.cfg
@@ -3,7 +3,7 @@
 [unit_type]
 	id=WDWraith
 	name= _ "Deceptive Phantom"
-	race=WDshadowborn
+	race=WDSimple_race
 	gender=female
 	image="frakcja1/wraith1.png"
 	{MAGENTA_IS_THE_TEAM_COLOR}
