--- a/units/frakcja1/wraith2.cfg
+++ b/units/frakcja1/wraith2.cfg
@@ -3,7 +3,7 @@
 [unit_type]
 	id=WDWraith2
 	name= _ "Banshee"
-	race=WDshadowborn
+	race=WDSimple_race
 	gender=female
 	image="frakcja1/wraith2.png"
 	{MAGENTA_IS_THE_TEAM_COLOR}
