--- a/units/units.cfg
+++ b/units/units.cfg
@@ -1,10 +1,10 @@
 #textdomain wesnoth-Simple_mod
 
 [race]
-        id=WDshadowborn
-        male_name= _ "Shadowborn"
-        female_name= _ "female^Shadowborn"
-        plural_name= _ "plural^Shadowborn"
+        id=WDSimple_race
+        male_name= _ "Simple_race"
+        female_name= _ "female^Simple_race"
+        plural_name= _ "plural^Simple_race"
         description= _ "tbd"
         male_names= _ "Shad,Shan,Shar,Sher,Shev,Shin"
 		female_names= _ "Shari,Shana,Shavi,Shida,Shina,Shiva"
