--- a/factions/Simple_mod-Simple_race.cfg
+++ b/factions/Simple_mod-Simple_race.cfg
@@ -1,7 +1,7 @@
 #textdomain wesnoth-Simple_mod
 [multiplayer_side]
-    id=WDshadowborn
-    name= _ "Shadowborn"
+    id=WDSimple_race
+    name= _ "Simple_race"
     image=frakcja1/warrior2.png
     {MAGENTA_IS_THE_TEAM_COLOR}
     type=WDShadow_Warrior2
