--- a/units/frakcja1/shadow_stalker.cfg
+++ b/units/frakcja1/shadow_stalker.cfg
@@ -3,7 +3,7 @@
 [unit_type]
 	id=WDShadow_Stalker
 	name= _ "Shadow Stalker"
-	race=WDshadowborn
+	race=WDSimple_race
 	image="frakcja1/stalker1.png"
     #halo=halo/soulstole_halo0.png
 	{MAGENTA_IS_THE_TEAM_COLOR}
