--- a/units/frakcja1/shadow_warrior.cfg
+++ b/units/frakcja1/shadow_warrior.cfg
@@ -3,7 +3,7 @@
 [unit_type]
 	id=WDShadow_Warrior
 	name= _ "Shadow Fighter"
-	race=WDshadowborn
+	race=WDSimple_race
 	image="frakcja1/warrior1.png"
 	{MAGENTA_IS_THE_TEAM_COLOR}
 	hitpoints=28
