--- a/units/frakcja1/shadow_warrior2.cfg
+++ b/units/frakcja1/shadow_warrior2.cfg
@@ -3,7 +3,7 @@
 [unit_type]
 	id=WDShadow_Warrior2
 	name= _ "Shadow Warrior"
-	race=WDshadowborn
+	race=WDSimple_race
 	image="frakcja1/warrior2.png"
 	{MAGENTA_IS_THE_TEAM_COLOR}
 	hitpoints=44
