--- a/factions/Simple_mod-Simple_race.cfg
+++ b/factions/Simple_mod-Simple_race.cfg
@@ -6,5 +6,5 @@
     {MAGENTA_IS_THE_TEAM_COLOR}
     type=WDShadow_Warrior2
     leader=WDShadow_Warrior2,WDWraith2,WDShadow_Stalker2,WDWarlock
-    recruit=WDShadow_Warrior,WDShadow_Stalker,WDShade,WDWraith,WDCavalry,WDWarlock,WDBeast
+    recruit=WDShadow_Warrior,WDShadow_Stalker,WDShade,WDWraith,WDCavalry,WDWarlock,WDBeast, WDMoja_Jednostka
 [/multiplayer_side]
