--- a/units/frakcja1/Moja_jednostka.cfg
+++ b/units/frakcja1/Moja_jednostka.cfg
@@ -9,40 +9,39 @@
 	hitpoints=453
 	num_traits=1
         [resistance]
-            blade=23
-            pierce=60
-            impact=40
+            blade=50
+            pierce=160
+            impact=-20
+            fire=-40
         [/resistance]
 	movement_type=smallfoot
-	movement=5
-	experience=38
-	level=1
+	movement=12
+	experience=380
+	level=6
 	alignment=chaotic
 	advances_to=WDBeast2
-	cost=22
+	cost=80
 	die_sound=wail-long.wav
 	usage=fighter
 	description= _ ""
 	[attack]
-		name=bash
-		description=_"bash"
+		name=Mord
+		description=_"Mord"
 		type=impact
 		range=melee
-		damage=1
-		number=9
+		damage=10
+		number=5
 		icon=attacks/slam-drake.png
 	[/attack]
 	[attack]
 		name=charge
 		description=_"charge"
-		type=impact
-		range=melee
-		damage=10
-		number=1
+		type=fire
+		range=ranged
+		damage=17
+		number=3
 		icon=attacks/blank-attack.png
 		[specials]
-			{WEAPON_SPECIAL_CHARGE}
-			{WEAPON_SPECIAL_ARMOR_BREAKER}
 		[/specials]
 	[/attack]
   [attack_anim]
