--- a/units/frakcja1/Moja_jednostka.cfg
+++ b/units/frakcja1/Moja_jednostka.cfg
@@ -1,10 +1,8 @@
-﻿#textdomain wesnoth-Simple_mod
-
 [unit_type]
 	id=WDMoja_Jednostka
 	name= _ "Moja jednostka"
 	race=monster
-	image="frakcja1/beast1.png"
+	image="frakcja1/Moja_jednostka.png"
 	{MAGENTA_IS_THE_TEAM_COLOR}
 	hitpoints=453
 	num_traits=1
@@ -25,142 +23,141 @@
 	usage=fighter
 	description= _ ""
 	[attack]
-		name=Mord
-		description=_"Mord"
-		type=impact
+		name=Ofiara
+		description=_"Ofiara"
+		type=blade
 		range=melee
 		damage=10
 		number=5
-		icon=attacks/slam-drake.png
+		icon=attacks/sickle.png
 	[/attack]
 	[attack]
-		name=charge
-		description=_"charge"
+		name=Gniew
+		description=_"Gniew"
 		type=fire
 		range=ranged
 		damage=17
 		number=3
-		icon=attacks/blank-attack.png
+		icon=attacks/claws-fire-elemental.png
 		[specials]
 		[/specials]
 	[/attack]
   [attack_anim]
         [filter_attack]
-            name=charge
+            name=Gniew
         [/filter_attack]
         offset=0.0~0.2,0.2~0.6,0.6~0.4,0.4~0.0
         start_time=-500
         [frame]
             duration=150
-            image="frakcja1/beast1.png"
+            image="frakcja1/Moja_jednostka_Atak.png"
         [/frame]
         [if]
             hits=yes
             [frame]
                 duration=125
-                image="frakcja1/beast1.png"
+                image="frakcja1/Moja_jednostka_Atak.png"
                 sound=mace.wav
             [/frame]
        [frame]
             duration=80
-            image="frakcja1/beast1.png"
+            image="frakcja1/Moja_jednostka_Atak.png"
         [/frame]
         [frame]
             duration=80
-            image="frakcja1/beast1.png"
+            image="frakcja1/Moja_jednostka_Atak.png"
         [/frame]
         [frame]
             duration=80
-            image="frakcja1/beast1.png"
+            image="frakcja1/Moja_jednostka_Atak.png"
         [/frame]
    [frame]
             duration=100
-            image="frakcja1/beast1.png"
+            image="frakcja1/Moja_jednostka_Atak.png"
         [/frame]
         [else]
             hits=no
             [frame]
                 duration=125
-                image="frakcja1/beast1.png"
+                image="frakcja1/Moja_jednostka_Atak.png"
 				sound={SOUND_LIST:MISS}
             [/frame]
         [frame]
             duration=80
-            image="frakcja1/beast1.png"
+            image="frakcja1/Moja_jednostka.png"
         [/frame]
         [frame]
             duration=80
-            image="frakcja1/beast1.png"
+            image="frakcja1/Moja_jednostka.png"
         [/frame]
         [frame]
             duration=80
-            image="frakcja1/beast1.png"
+            image="frakcja1/Moja_jednostka.png"
         [/frame]
    [frame]
             duration=100
-            image="frakcja1/beast1.png"
+            image="frakcja1/Moja_jednostka.png"
         [/frame]
     [/else]
         [/if]
     [/attack_anim]
   [attack_anim]
         [filter_attack]
-            name=bash
+            name=Ofiara
         [/filter_attack]
         offset=0.0~0.2,0.2~0.6,0.6~0.4,0.4~0.0
         start_time=-500
         [frame]
             duration=150
-            image="frakcja1/beast1.png"
+            image="frakcja1/Moja_jednostka.png"
         [/frame]
         [if]
             hits=yes
             [frame]
                 duration=125
-                image="frakcja1/beast1.png"
+                image="frakcja1/Moja_jednostka.png"
                 sound=club.ogg
             [/frame]
        [frame]
             duration=80
-            image="frakcja1/beast1.png"
+            image="frakcja1/Moja_jednostka.png"
         [/frame]
         [frame]
             duration=80
-            image="frakcja1/beast1.png"
+            image="frakcja1/Moja_jednostka.png"
         [/frame]
         [frame]
             duration=80
-            image="frakcja1/beast1.png"
+            image="frakcja1/Moja_jednostka.png"
         [/frame]
    [frame]
             duration=100
-            image="frakcja1/beast1.png"
+            image="frakcja1/Moja_jednostka.png"
         [/frame]
         [/if]
         [else]
             hits=no
             [frame]
                 duration=125
-                image="frakcja1/beast1.png"
+                image="frakcja1/Moja_jednostka.png"
 				sound={SOUND_LIST:MISS}
             [/frame]
         [frame]
             duration=80
-            image="frakcja1/beast1.png"
+            image="frakcja1/Moja_jednostka.png"
         [/frame]
         [frame]
             duration=80
-            image="frakcja1/beast1.png"
+            image="frakcja1/Moja_jednostka.png"
         [/frame]
         [frame]
             duration=80
-            image="frakcja1/beast1.png"
+            image="frakcja1/Moja_jednostka.png"
         [/frame]
    [frame]
             duration=100
-            image="frakcja1/beast1.png"
+            image="frakcja1/Moja_jednostka.png"
         [/frame]
     [/else]
     [/attack_anim]
 [/unit_type]
-
