--- a/units/frakcja1/Moja_jednostka.cfg
+++ b/units/frakcja1/Moja_jednostka.cfg
@@ -4,160 +4,49 @@
 	race=monster
 	image="frakcja1/Moja_jednostka.png"
 	{MAGENTA_IS_THE_TEAM_COLOR}
-	hitpoints=453
-	num_traits=1
-        [resistance]
-            blade=50
-            pierce=160
-            impact=-20
-            fire=-40
-        [/resistance]
+	hitpoints=60
 	movement_type=smallfoot
-	movement=12
+	movement=8
 	experience=380
-	level=6
+	level=0
 	alignment=chaotic
-	advances_to=WDBeast2
-	cost=80
+	cost=30
 	die_sound=wail-long.wav
 	usage=fighter
-	description= _ ""
-	[attack]
-		name=Ofiara
-		description=_"Ofiara"
-		type=blade
-		range=melee
-		damage=10
-		number=5
-		icon=attacks/sickle.png
-	[/attack]
-	[attack]
-		name=Gniew
-		description=_"Gniew"
-		type=fire
-		range=ranged
-		damage=17
-		number=3
-		icon=attacks/claws-fire-elemental.png
-		[specials]
-		[/specials]
-	[/attack]
-  [attack_anim]
+	description= _ "Moja Jednostka pierwsza"
+	[death]
+        start_time=0
+        [frame]
+            image="frakcja1/Moja_Jednostka_Śmierć[1~3].png:120"
+        [/frame]
+    [/death]
+    [attack]
+        name=sword
+        description=_"sword"
+        icon=attacks/sword-orcish.png
+        type=blade
+        range=melee
+        damage=9
+        number=2
+    [/attack]
+    [attack_anim]
         [filter_attack]
-            name=Gniew
+            name=sword
         [/filter_attack]
-        offset=0.0~0.2,0.2~0.6,0.6~0.4,0.4~0.0
-        start_time=-500
+        offset=0.0~0.15:100,0.15~0.35:100,0.35~0.45:75,0.45~0.5:100,0.5:20,0.5~0.4:30,0.4~0.2:75,0.2~0.0:75
+        start_time=-300
         [frame]
-            duration=150
-            image="frakcja1/Moja_jednostka_Atak.png"
-        [/frame]
-        [if]
-            hits=yes
-            [frame]
-                duration=125
-                image="frakcja1/Moja_jednostka_Atak.png"
-                sound=mace.wav
-            [/frame]
-       [frame]
-            duration=80
-            image="frakcja1/Moja_jednostka_Atak.png"
+            image="frakcja1/Moja_Jednostka.png:50"
         [/frame]
         [frame]
-            duration=80
-            image="frakcja1/Moja_jednostka_Atak.png"
+            image="frakcja1/Moja_Jednostka-defend-1.png:50"
         [/frame]
         [frame]
-            duration=80
-            image="frakcja1/Moja_jednostka_Atak.png"
+            image="frakcja1/Moja_Jednostka-attack-[1~5].png:[100,75,100,50,75]"
         [/frame]
-   [frame]
-            duration=100
-            image="frakcja1/Moja_jednostka_Atak.png"
-        [/frame]
-        [else]
-            hits=no
-            [frame]
-                duration=125
-                image="frakcja1/Moja_jednostka_Atak.png"
-				sound={SOUND_LIST:MISS}
-            [/frame]
+        {SOUND:HIT_AND_MISS {SOUND_LIST:SWORD_SWISH} {SOUND_LIST:MISS} -100}
         [frame]
-            duration=80
-            image="frakcja1/Moja_jednostka.png"
+            image="frakcja1/Moja_Jednostka.png:75"
         [/frame]
-        [frame]
-            duration=80
-            image="frakcja1/Moja_jednostka.png"
-        [/frame]
-        [frame]
-            duration=80
-            image="frakcja1/Moja_jednostka.png"
-        [/frame]
-   [frame]
-            duration=100
-            image="frakcja1/Moja_jednostka.png"
-        [/frame]
-    [/else]
-        [/if]
-    [/attack_anim]
-  [attack_anim]
-        [filter_attack]
-            name=Ofiara
-        [/filter_attack]
-        offset=0.0~0.2,0.2~0.6,0.6~0.4,0.4~0.0
-        start_time=-500
-        [frame]
-            duration=150
-            image="frakcja1/Moja_jednostka.png"
-        [/frame]
-        [if]
-            hits=yes
-            [frame]
-                duration=125
-                image="frakcja1/Moja_jednostka.png"
-                sound=club.ogg
-            [/frame]
-       [frame]
-            duration=80
-            image="frakcja1/Moja_jednostka.png"
-        [/frame]
-        [frame]
-            duration=80
-            image="frakcja1/Moja_jednostka.png"
-        [/frame]
-        [frame]
-            duration=80
-            image="frakcja1/Moja_jednostka.png"
-        [/frame]
-   [frame]
-            duration=100
-            image="frakcja1/Moja_jednostka.png"
-        [/frame]
-        [/if]
-        [else]
-            hits=no
-            [frame]
-                duration=125
-                image="frakcja1/Moja_jednostka.png"
-				sound={SOUND_LIST:MISS}
-            [/frame]
-        [frame]
-            duration=80
-            image="frakcja1/Moja_jednostka.png"
-        [/frame]
-        [frame]
-            duration=80
-            image="frakcja1/Moja_jednostka.png"
-        [/frame]
-        [frame]
-            duration=80
-            image="frakcja1/Moja_jednostka.png"
-        [/frame]
-   [frame]
-            duration=100
-            image="frakcja1/Moja_jednostka.png"
-        [/frame]
-    [/else]
     [/attack_anim]
 [/unit_type]
