--- a/units/frakcja1/Moja_jednostka.cfg
+++ b/units/frakcja1/Moja_jednostka.cfg
@@ -39,10 +39,10 @@
             image="frakcja1/Moja_Jednostka.png:50"
         [/frame]
         [frame]
-            image="frakcja1/Moja_Jednostka-defend-1.png:50"
+            image="frakcja1/Moja_Jednostka_Obrona[1~2].png:50"
         [/frame]
         [frame]
-            image="frakcja1/Moja_Jednostka-attack-[1~5].png:[100,75,100,50,75]"
+            image="frakcja1/Moja_Jednostka_Atak[1~5].png:[100,75,100,50,75]"
         [/frame]
         {SOUND:HIT_AND_MISS {SOUND_LIST:SWORD_SWISH} {SOUND_LIST:MISS} -100}
         [frame]
