--- a/factions/Simple_mod-Simple_race-Heroic.cfg
+++ b/factions/Simple_mod-Simple_race-Heroic.cfg
@@ -1,10 +1,10 @@
 #textdomain wesnoth-Simple_mod
 [multiplayer_side]
     id=WDSimple_race
-    name= _ "Simple_race"
-    image=frakcja1/shadow_lord.png
+    name= _ "Edypianie"
+    image=frakcja1/Jokasta.png
     {MAGENTA_IS_THE_TEAM_COLOR}
     type=WDShadow_Stalker3
-    leader=WDShadow_Stalker3,WDPuppeteer,WDWarlock2
-    recruit=WDBeast2,WDCavalry2,WDShadow_Warrior2,WDWraith2,WDShadow_Stalker2,WDWarlock,WDShadow_Warrior,WDShadow_Stalker,WDShade,WDWraith,WDCavalry,WDWarlock,WDBeast
+    leader=Wisielec
+    recruit=Peasant,Teb,Chor
 [/multiplayer_side]
