--- a/factions/Simple_mod-Simple_race.cfg
+++ b/factions/Simple_mod-Simple_race.cfg
@@ -1,10 +1,10 @@
 #textdomain wesnoth-Simple_mod
 [multiplayer_side]
     id=WDSimple_race
-    name= _ "Simple_race"
-    image=frakcja1/warrior2.png
+    name= _ "Edypianie"
+    image=frakcja1/Jokasta.png
     {MAGENTA_IS_THE_TEAM_COLOR}
     type=WDShadow_Warrior2
-    leader=WDShadow_Warrior2,WDWraith2,WDShadow_Stalker2,WDWarlock
-    recruit=WDShadow_Warrior,WDShadow_Stalker,WDShade,WDWraith,WDCavalry,WDWarlock,WDBeast, WDMoja_Jednostka
+    leader=Jokasta
+    recruit=Peasant,Teb
 [/multiplayer_side]
