--- a/Eras.cfg
+++ b/Eras.cfg
@@ -7,6 +7,7 @@ require_era=yes
 
 {RANDOM_SIDE}
 {~add-ons/Simple_mod/factions/Simple_mod-Simple_race.cfg}
+{~add-ons/Simple_mod/factions/Simple_mod-Simple_race2.cfg}
 [/era]
 
 [era]
@@ -22,6 +23,7 @@ require_era=yes
 {multiplayer/factions/knalgans-default.cfg}
 {multiplayer/factions/drakes-default.cfg}
 {~add-ons/Simple_mod/factions/Simple_mod-Simple_race.cfg}
+{~add-ons/Simple_mod/factions/Simple_mod-Simple_race2.cfg}
 [/era]
 
 [era]
