--- a/factions/Simple_mod-Simple_race.cfg
+++ b/factions/Simple_mod-Simple_race.cfg
@@ -6,5 +6,5 @@
     {MAGENTA_IS_THE_TEAM_COLOR}
     type=WDShadow_Warrior2
     leader=Jokasta
-    recruit=Peasant,Teb
+    recruit=Peasant,Teb,Zagadka,Zaraza
 [/multiplayer_side]
