--- a/units/frakcja1/Saphire_Dragon.cfg
+++ b/units/frakcja1/Saphire_Dragon.cfg
@@ -1,20 +1,14 @@
 #textdomain wesnoth-units
 [unit_type]
     id=Saphire Dragon
-    name= _ "Sapphire Dragon"
+    name= _ "Szafirowy Smok"
     race=monster
-    image="units/monsters/saphiredragon.png"
+    image="frakcja1/saphiredragon.png"
     {DEFENSE_ANIM_RANGE "units/monsters/saphiredragon.png" "units/monsters/saphire-dragon.png" {SOUND_LIST:DRAKE_HIT} melee}
     [abilities]
 {ABILITY_ILLUMINATES}
         {ABILITY_LEADERSHIP_LEVEL_5}
     [/abilities]
-[portrait]
-            size=400
-            side="left"
-            mirror="false"
-            image="images/portraits/monsters/transparent/saphire-dragon.png"
-        [/portrait]
     hitpoints=100
     movement_type=fly
     movement=10
@@ -56,7 +50,7 @@
     [/attack]
     [attack]
         name=matiosc
-        description= _"matiosc"
+        description= _"matiość"
         icon=attacks/mati.png
         type=fire
         [specials]
