--- a/units/units.cfg
+++ b/units/units.cfg
@@ -14,7 +14,7 @@
 [/race]
 
     [movetype]
-        name=shadowfoot
+        name=tebfoot
 
         [movement_costs]
 			#deep_water=5
@@ -35,28 +35,28 @@
 
         [defense]
 			#deep_water=80
-            shallow_water=60
-            reef=50
-            swamp_water=60
-            flat=50
-            sand=50
-            forest=40
-            hills=40
-            mountains=30
-            village=30
-            castle=30
+            shallow_water=70
+            reef=70
+            swamp_water=70
+            flat=60
+            sand=60
+            forest=50
+            hills=50
+            mountains=40
+            village=40
+            castle=40
             cave=50
-            frozen=60
-            fungus=40
+            frozen=70
+            fungus=60
         [/defense]
 
         [resistance]
-            blade=90
-            pierce=90
-            impact=90
-            fire=120
-            cold=80
-            arcane=120
+            blade=100
+            pierce=110
+            impact=110
+            fire=90
+            cold=100
+            arcane=80
         [/resistance]
     [/movetype]
 
