--- a/_main.cfg
+++ b/_main.cfg
@@ -9,6 +9,7 @@ path=data/add-ons/Simple_mod
 [+units]
 {~add-ons/Simple_mod/units/units.cfg}
 {~add-ons/Simple_mod/units/frakcja1/}
+{~add-ons/Simple_mod/units/frakcja2/}
 [/units]
     [lua]
         code=<<
