--- a/factions/Simple_mod-Simple_race2.cfg
+++ b/factions/Simple_mod-Simple_race2.cfg
@@ -2,7 +2,7 @@
 [multiplayer_side]
     id=WDSimple_race2
     name= _ "Oponenci Edypa"
-    image=frakcja2/Zaraza.png
+    image=frakcja2/Zagadka.png
     {MAGENTA_IS_THE_TEAM_COLOR}
     type=WDShadow_Warrior2
     leader=Ares,nic,Zagadka,Zaraza
