--- a/units/frakcja2/Ares.cfg
+++ b/units/frakcja2/Ares.cfg
@@ -36,7 +36,7 @@ blade=50
 		number=4
 		icon=attacks/sword-steel.png
 		[specials]
-			{WEAPON_SPECIAL_MARKSMAN}
+			{WEAPON_SPECIAL_MAGICAL}
 			{WEAPON_SPECIAL_FIRSTSTRIKE }
 		[/specials]
 	[/attack]
@@ -49,8 +49,9 @@ blade=50
 		number=5
 		icon=attacks/sword-human-short.png
 		[specials]
-			{WEAPON_SPECIAL_MARKSMAN}
-			{WEAPON_SPECIAL_FIRSTSTRIKE }
+			{WEAPON_SPECIAL_MAGICAL}
+			{WEAPON_SPECIAL_FIRSTSTRIKE}
+			{WEAPON_SPECIAL_CHARGE}
 		[/specials]
 	[/attack]
 	[attack]
@@ -62,7 +63,7 @@ blade=50
 		number=1
 		icon=attacks/heater-shield.png
 		[specials]
-			{WEAPON_SPECIAL_MARKSMAN}
+			{WEAPON_SPECIAL_MAGICAL}
 			{WEAPON_SPECIAL_SLOW}
 		[/specials]
 	[/attack]
