--- a/units/frakcja2/Ares.cfg
+++ b/units/frakcja2/Ares.cfg
@@ -61,7 +61,7 @@ blade=50
 		range=melee
 		damage=16
 		number=1
-		icon=attacks/heater-shield.png
+		icon=attacks/tarcza.png
 		[specials]
 			{WEAPON_SPECIAL_MAGICAL}
 			{WEAPON_SPECIAL_SLOW}
