V 3.1.3 Modyfikacje Odporności Aresa

--- a/units/frakcja2/Ares.cfg
+++ b/units/frakcja2/Ares.cfg
@@ -8,7 +8,7 @@ hitpoints=12
 cost= 40
 
         [defense]
-			#deep_water=60
+		#deep_water=60
             shallow_water=50
             reef=50
             swamp_water=70
@@ -23,10 +23,14 @@ cost= 40
             frozen=50
             fungus=15
         [/defense]
-[resistances]
-pierce=90
+[resistance]
+pierce=40
 blade=50
-[/resistances]
+impact=180
+cold=0
+fire=0
+arcane=0
+[/resistance]
 	[attack]
 		name=charge
 		description=_"Miecz"
