--- a/factions/Simple_mod-Simple_race.cfg
+++ b/factions/Simple_mod-Simple_race.cfg
@@ -2,9 +2,9 @@
 [multiplayer_side]
     id=WDSimple_race
     name= _ "Edypianie"
-    image=frakcja1/Jokasta.png
+    image=frakcja1/Posel.png
     {MAGENTA_IS_THE_TEAM_COLOR}
     type=WDShadow_Warrior2
-    leader=Jokasta
-    recruit=Peasant,Teb,Chor
+    leader=Jokasta,Posel
+    recruit=Peasant,Teb,Chor,Posel
 [/multiplayer_side]
