--- a/units/frakcja2/Ares.cfg
+++ b/units/frakcja2/Ares.cfg
@@ -4,8 +4,9 @@ id=Sergeant
 [/base_unit]
 id=Ares
 name=_ "Obraz Aresa"
-advances_to=NULL
+advances_to=null
 hitpoints=12
+attacks=2
 cost= 40
 
         [defense]
@@ -44,6 +45,7 @@ arcane=0
 			{WEAPON_SPECIAL_MAGICAL}
 			{WEAPON_SPECIAL_FIRSTSTRIKE }
 		[/specials]
+movement_used=1
 	[/attack]
 	[attack]
 		name=charge
@@ -58,6 +60,7 @@ arcane=0
 			{WEAPON_SPECIAL_FIRSTSTRIKE}
 			{WEAPON_SPECIAL_CHARGE}
 		[/specials]
+movement_used=1
 	[/attack]
 	[attack]
 		name=charge
@@ -71,5 +74,6 @@ arcane=0
 			{WEAPON_SPECIAL_MAGICAL}
 			{WEAPON_SPECIAL_SLOW}
 		[/specials]
+movement_used=1
 	[/attack]
 [/unit_type]
