--- a/units/frakcja2/Ares.cfg
+++ b/units/frakcja2/Ares.cfg
@@ -60,7 +60,7 @@ movement_used=1
 			{WEAPON_SPECIAL_FIRSTSTRIKE}
 			{WEAPON_SPECIAL_CHARGE}
 		[/specials]
-movement_used=1
+movement_used=1```````
 	[/attack]
 	[attack]
 		name=charge
