--- a/units/frakcja2/Ares.cfg
+++ b/units/frakcja2/Ares.cfg
@@ -6,6 +6,7 @@ id=Ares
 name=_ "Obraz Aresa"
 advances_to=null
 hitpoints=12
+level=3
 attacks=2
 cost= 40
 
@@ -60,7 +61,7 @@ movement_used=1
 			{WEAPON_SPECIAL_FIRSTSTRIKE}
 			{WEAPON_SPECIAL_CHARGE}
 		[/specials]
-movement_used=1```````
+movement_used=1
 	[/attack]
 	[attack]
 		name=charge
