--- a/units/frakcja1/Artemida.cfg
+++ b/units/frakcja1/Artemida.cfg
@@ -33,7 +33,6 @@
 			fire=100
 			arcane=50
 		[/resistance]
-		[/attack]
 	[attack]
 		name=charge
 		description=_"Sztych"
@@ -43,8 +42,7 @@
 		number=1
 		icon=attacks/sword-elven.png
 		[specials]
-			{WEAPON_SPECIAL_MAGICAL}
-			{WEAPON_SPECIAL_FIRSTSTRIKE}
+	{WEAPON_SPECIAL_MAGICAL}	{WEAPON_SPECIAL_FIRSTSTRIKE}
 		[/specials]
 movement_used=0
 	[/attack]
