--- a/factions/Simple_mod-Simple_race.cfg
+++ b/factions/Simple_mod-Simple_race.cfg
@@ -5,6 +5,6 @@
     image=frakcja1/Posel.png
     {MAGENTA_IS_THE_TEAM_COLOR}
     type=WDShadow_Warrior2
-    leader=Jokasta,Posel
+    leader=Jokasta,Posel,Artemida
     recruit=Peasant,Teb,Chor,Posel
 [/multiplayer_side]
