--- a/units/frakcja1/Artemida.cfg
+++ b/units/frakcja1/Artemida.cfg
@@ -44,6 +44,19 @@
 		[specials]
 	{WEAPON_SPECIAL_MAGICAL}	{WEAPON_SPECIAL_FIRSTSTRIKE}
 		[/specials]
-movement_used=0
+movement_used=1
+	[/attack]
+	[attack]
+		name=charge
+		description=_"Łuk"
+		type=pierce
+		range=ranged
+		damage=14
+		number=2
+		icon=attacks/bow-short-reinforced.png
+		[specials]
+	{WEAPON_SPECIAL_MAGICAL}	
+		[/specials]
+movement_used=1
 	[/attack]
 [/unit_type]
