--- a/units/frakcja1/Atena.cfg
+++ b/units/frakcja1/Atena.cfg
@@ -2,13 +2,13 @@
 	[base_unit]
 	id=Spearman
 	[/base_unit]
-	id=Artemida
-	name=_ "Artemida"
+	id=Atena
+	name=_ "Atena"
 	advances_to=null
-	hitpoints=1
+	hitpoints=25
 	level=3
-	attacks=3
-	cost= 50
+	attacks=2
+	cost= 48
 	[defense]
 			#deep_water=5
             shallow_water=5
@@ -35,9 +35,50 @@
 		[/resistance]
 	[attack]
 		name=charge
-		description=_"Sztych"
+		description=_"Złota Włócznia"
 		type=pierce
 		range=melee
+		damage=12
+		number=2
+		icon=attacks/sword-elven.png
+		[specials]
+	{WEAPON_SPECIAL_MAGICAL}	{WEAPON_SPECIAL_FIRSTSTRIKE}
+		[/specials]
+movement_used=0
+	[/attack]
+	
+	[attack]
+		name=charge
+		description=_"Rzut Piorunem"
+		type=arcane
+		range=ranged
+		damage=12
+		number=1
+		icon=attacks/lightning.png
+		[specials]
+		[/specials]
+movement_used=0
+	[/attack]
+	
+	[attack]
+		name=charge
+		description=_"Sowa"
+		type=blade
+		range=ranged
+		damage=5
+		number=3
+		icon=attacks/sword-elven.png
+		[specials]
+	{WEAPON_SPECIAL_MAGICAL}	{WEAPON_SPECIAL_FIRSTSTRIKE}
+		[/specials]
+movement_used=0
+	[/attack]
+	
+	[attack]
+		name=charge
+		description=_"Egida"
+		type=pierce
+		range=ranged
 		damage=10
 		number=1
 		icon=attacks/sword-elven.png
