--- a/units/frakcja2/nic.cfg
+++ b/units/frakcja2/nic.cfg
@@ -13,7 +13,7 @@
     advances_to=null
     cost=14
     usage=fighter
-    description= _ "Najwybitniejsi Tebanczycy z Teb"
+    description= _ "brak"
     die_sound={SOUND_LIST:HUMAN_DIE}
     {DEFENSE_ANIM "Frakcja1/Teb/Teb_D2.png" "Frakcja1/Teb/Teb_D1.png" {SOUND_LIST:HUMAN_HIT} }
     [attack]
@@ -27,7 +27,7 @@
     [/attack]
 	[attack]
         name=club
-        description= _ "Opiewanie"
+        description= _ "Krzyk"
         icon=attacks/wail.png
         type=blade
         range=ranged
