--- a/units/frakcja1/Posel.cfg
+++ b/units/frakcja1/Posel.cfg
@@ -10,7 +10,7 @@
 	experience=17
 	level=1
 	alignment=lawful
-	advances_to=NULL
+	advances_to=null
 	cost=20
 	die_sound=wail-long.wav
 	usage=fighter
