--- a/units/frakcja1/Posel.cfg
+++ b/units/frakcja1/Posel.cfg
@@ -6,6 +6,10 @@
 	{MAGENTA_IS_THE_TEAM_COLOR}
 	hitpoints=20
 	movement_type=mounted
+	[resistances]
+	impact=100
+	pierce=140
+	[/resistances]
 	movement=9
 	experience=17
 	level=1
