--- a/units/frakcja1/Posel.cfg
+++ b/units/frakcja1/Posel.cfg
@@ -6,10 +6,10 @@
 	{MAGENTA_IS_THE_TEAM_COLOR}
 	hitpoints=20
 	movement_type=mounted
-	[resistances]
+	[resistance]
 	impact=100
 	pierce=140
-	[/resistances]
+	[/resistance]
 	movement=9
 	experience=17
 	level=1
