--- a/units/frakcja2/Wojownik.cfg
+++ b/units/frakcja2/Wojownik.cfg
@@ -16,8 +16,8 @@
 	usage=fighter
 	description= _ ""
     [attack]
-        name=Wojownik
-        description=_"Wojownik"
+        name=Obuch
+        description=_"Obuch"
         icon=attacks/mace.png
         type=impact
         range=melee
@@ -27,22 +27,19 @@
     [/attack]
     [attack_anim]
         [filter_attack]
-            name=Wojownik
+            name=Obuch
         [/filter_attack]
-        offset=0.0~0.15:100,0.15~0.35:100,0.35~0.45:75,0.45~0.5:100,0.5:20,0.5~0.4:30,0.4~0.2:75,0.2~0.0:75
+		offset=0.0~0.15:100,0.15~0.35:100,0.35~0.45:75,0.45~0.5:100,0.5:20,0.5~0.4:30,0.4~0.2:75,0.2~0.0:75
         start_time=-300
         [frame]
             image="frakcja2/Wojownik.png:50"
         [/frame]
         [frame]
-            image="frakcja2/Wojownik.png:50"
+            image="frakcja2/Wojownik-Atak[1~4,3].png:[75*3,95,80]"
         [/frame]
+        {SOUND:HIT_AND_MISS club.ogg {SOUND_LIST:MISS} -200}
         [frame]
-            image="frakcja2/Wojownik.png:[100,75,100,50,75]"
-        [/frame]
-        {SOUND:HIT_AND_MISS {SOUND_LIST:SWORD_SWISH} {SOUND_LIST:MISS} -100}
-        [frame]
-            image="frakcja2/Wojownik.png:75"
+            image="frakcja2/Wojownik-Obrona.png:75"
         [/frame]
     [/attack_anim]
 [/unit_type]
