Animacje Wojownika(atak i obrona) Poseł animacja

--- a/units/frakcja2/Wojownik.cfg
+++ b/units/frakcja2/Wojownik.cfg
@@ -30,7 +30,7 @@
             name=Obuch
         [/filter_attack]
 		offset=0.0~0.15:100,0.15~0.35:100,0.35~0.45:75,0.45~0.5:100,0.5:20,0.5~0.4:30,0.4~0.2:75,0.2~0.0:75
-        start_time=-300
+        start_time=-375
         [frame]
             image="frakcja2/Wojownik.png:50"
         [/frame]
@@ -39,7 +39,29 @@
         [/frame]
         {SOUND:HIT_AND_MISS club.ogg {SOUND_LIST:MISS} -200}
         [frame]
-            image="frakcja2/Wojownik-Obrona.png:75"
+            image="frakcja2/Wojownik.png:75"
         [/frame]
     [/attack_anim]
+	[defend]
+        start_time=-151
+        [filter_attack]
+            range=melee
+        [/filter_attack]
+        [frame]
+            image="frakcja2/Wojownik.png:1"
+        [/frame]
+        [frame]
+            image="frakcja2/Wojownik-Blok[1~2].png:[75*2]"
+        [/frame]
+        [frame]
+            image="frakcja2/Wojownik.png:1"
+        [/frame]
+        [if]
+            hits=hit
+            hit_sound_start_time=-50
+            [hit_sound_frame]
+                sound={SOUND_LIST:ELF_HIT}
+            [/hit_sound_frame]
+        [/if]
+    [/defend]
 [/unit_type]
