Nowa grafika choru

--- a/units/frakcja1/Chór.cfg
+++ b/units/frakcja1/Chór.cfg
@@ -2,7 +2,7 @@
     id=Chor
     name= _ "Chor"
     race=human
-    image="Frakcja1/Teb/Teb.png"
+    image="Frakcja1/chor.png"
     {MAGENTA_IS_THE_TEAM_COLOR}
     hitpoints=28
     movement_type=tebfoot
@@ -15,7 +15,7 @@
     usage=fighter
     description= _ "Najwybitniejsi Tebanczycy z Teb"
     die_sound={SOUND_LIST:HUMAN_DIE}
-    {DEFENSE_ANIM "Frakcja1/Teb/Teb_D2.png" "Frakcja1/Teb/Teb_D1.png" {SOUND_LIST:HUMAN_HIT} }
+    {DEFENSE_ANIM "Frakcja1/chor.png" "Frakcja1/chor.png" {SOUND_LIST:HUMAN_HIT} }
     [attack]
         name=club
         description= _ "Rekoczyn"
@@ -43,7 +43,7 @@
         [/filter_attack]
         start_time=-600
         [frame]
-            image="Frakcja1/Teb/Teb_A[1~7].png:100"
+            image="Frakcja1/chor.png:100"
         [/frame]
         {SOUND:HIT_AND_MISS staff.wav {SOUND_LIST:MISS} -100}
     [/attack_anim]
