--- a/units/frakcja1/Posel.cfg
+++ b/units/frakcja1/Posel.cfg
@@ -54,19 +54,13 @@
             name=sword
         [/filter_attack]
         offset=0.0~0.15:100,0.15~0.35:100,0.35~0.45:75,0.45~0.5:100,0.5:20,0.5~0.4:30,0.4~0.2:75,0.2~0.0:75
-        start_time=-300
+        start_time=-200
         [frame]
-            image="frakcja1/Posel-2.png:50"
-        [/frame]
-        [frame]
-            image="frakcja1/Posel-2.png:50"
-        [/frame]
-        [frame]
-            image="frakcja1/Posel-2.png:[100,75,100,50,75]"
+            image="frakcja1/Posel-2.png:200"
         [/frame]
         {SOUND:HIT_AND_MISS {SOUND_LIST:SWORD_SWISH} {SOUND_LIST:MISS} -100}
         [frame]
-            image="frakcja1/Posel.png-2:75"
+            image="frakcja1/Posel.png:75"
         [/frame]
     [/attack_anim]
 [/unit_type]
