Unik Wojownika ranged

--- a/units/frakcja2/Wojownik.cfg
+++ b/units/frakcja2/Wojownik.cfg
@@ -64,4 +64,27 @@
             [/hit_sound_frame]
         [/if]
     [/defend]
+	
+		[defend]
+        start_time=-150
+        [filter_attack]
+            range=ranged
+        [/filter_attack]
+        [frame]
+            image="frakcja2/Wojownik.png:100"
+        [/frame]
+        [frame]
+            image="frakcja2/Wojownik-Unik[1~2].png:[50*2]"
+        [/frame]
+        [frame]
+            image="frakcja2/Wojownik.png:1"
+        [/frame]
+        [if]
+            hits=hit
+            hit_sound_start_time=-50
+            [hit_sound_frame]
+                sound={SOUND_LIST:ELF_HIT}
+            [/hit_sound_frame]
+        [/if]
+    [/defend]
 [/unit_type]
