--- a/units/frakcja1/Posel.cfg
+++ b/units/frakcja1/Posel.cfg
@@ -63,4 +63,50 @@
             image="frakcja1/Posel.png:75"
         [/frame]
     [/attack_anim]
+	
+		[defend]
+        start_time=-150
+        [filter_attack]
+            range=melee
+        [/filter_attack]
+        [frame]
+            image="frakcja2/Posel.png:100"
+        [/frame]
+        [frame]
+            image="frakcja2/Posel.png:[50*2]"
+        [/frame]
+        [frame]
+            image="frakcja2/Posel.png:1"
+        [/frame]
+        [if]
+            hits=hit
+            hit_sound_start_time=-50
+            [hit_sound_frame]
+                sound={SOUND_LIST:ELF_HIT}
+            [/hit_sound_frame]
+        [/if]
+    [/defend]
+	
+		[defend]
+        start_time=-150
+        [filter_attack]
+            range=ranged
+        [/filter_attack]
+        [frame]
+            image="frakcja2/Posel.png:100"
+        [/frame]
+        [frame]
+            image="frakcja2/Posel.png:[50*2]"
+        [/frame]
+        [frame]
+            image="frakcja2/Posel.png:1"
+        [/frame]
+        [if]
+            hits=hit
+            hit_sound_start_time=-50
+            [hit_sound_frame]
+                sound={SOUND_LIST:ELF_HIT}
+            [/hit_sound_frame]
+        [/if]
+    [/defend]
 [/unit_type]
