Animacja Bezczynności Wojownika

--- a/units/frakcja2/Wojownik.cfg
+++ b/units/frakcja2/Wojownik.cfg
@@ -87,4 +87,13 @@
             [/hit_sound_frame]
         [/if]
     [/defend]
+	
+	[idle_anim]
+	{STANDARD_IDLE_FILTER}
+        start_time=0
+		[frame]
+			image="frakcja2/Wojownik-Nic[1~3].png:[100*3]"
+		[/frame]
+	[/idle_anim]
+
 [/unit_type]
