--- a/factions/Simple_mod-Simple_race.cfg
+++ b/factions/Simple_mod-Simple_race.cfg
@@ -6,5 +6,5 @@
     {MAGENTA_IS_THE_TEAM_COLOR}
     type=WDShadow_Warrior2
     leader=Jokasta,Posel,Artemida,Apollo,Atena
-    recruit=Peasant,Teb,Chor,Posel
+    recruit=Peasant,Teb,Chor,Posel,Wyrocznia
 [/multiplayer_side]
