--- a/units/frakcja1/Wyrocznia.cfg
+++ b/units/frakcja1/Wyrocznia.cfg
@@ -11,7 +11,7 @@
 	level=2
 	alignment=neutral
 	advances_to=null
-	cost=10
+	cost=20
 	die_sound=wail-long.wav
 	usage=mix_fighter
 	description= _ ""
@@ -73,15 +73,17 @@
         [/frame]
     [/attack_anim]
 		[defend]
+		start_time=-450
+		[frame]
+			image="frakcja1/Wyrocznia/zmiana[1~3].png:[50*3]"
+		[/frame]
         start_time=-300
         [filter_attack]
             range=melee
         [/filter_attack]
-                [frame]
-					image="frakcja1/Wyrocznia/zmiana[1~3].png:[50*3]"
-				[/frame]
+                
 				 [frame]
-						image="frakcja1/Wyrocznia/moc.png:450"
+						image="frakcja1/Wyrocznia/moc.png:300"
 				[/frame]
         [if]
             hits=hit
