--- a/units/frakcja1/Posel.cfg
+++ b/units/frakcja1/Posel.cfg
@@ -65,20 +65,20 @@
     [/attack_anim]
 	
 		[defend]
-        start_time=-150
+        start_time=-151
         [filter_attack]
             range=melee
         [/filter_attack]
         [frame]
-            image="frakcja2/Posel.png:100"
+            image="frakcja2/Posel.png:150"
         [/frame]
         [frame]
-            image="frakcja2/Posel.png:[50*2]"
+            image="frakcja2/Posel-2.png:[100]"
         [/frame]
         [frame]
             image="frakcja2/Posel.png:1"
         [/frame]
-        [if]
+        [if]	
             hits=hit
             hit_sound_start_time=-50
             [hit_sound_frame]
@@ -88,15 +88,15 @@
     [/defend]
 	
 		[defend]
-        start_time=-150
+        start_time=-151
         [filter_attack]
             range=ranged
         [/filter_attack]
         [frame]
-            image="frakcja2/Posel.png:100"
+            image="frakcja2/Posel.png:150"
         [/frame]
         [frame]
-            image="frakcja2/Posel.png:[50*2]"
+            image="frakcja2/Posel-2.png:100"
         [/frame]
         [frame]
             image="frakcja2/Posel.png:1"
