--- a/units/frakcja1/Chór.cfg
+++ b/units/frakcja1/Chór.cfg
@@ -26,7 +26,7 @@
         number=3
     [/attack]
 	[attack]
-        name=club
+        name=sing
         description= _ "Opiewanie"
         icon=attacks/nuty.png
         type=arcane
@@ -41,7 +41,17 @@
         [filter_attack]
             name=club
         [/filter_attack]
-        start_time=-600
+        start_time=-300
+        [frame]
+            image="Frakcja1/chor.png:100"
+        [/frame]
+        {SOUND:HIT_AND_MISS staff.wav {SOUND_LIST:MISS} -100}
+    [/attack_anim]
+	[attack_anim]
+        [filter_attack]
+            name=sing
+        [/filter_attack]
+        start_time=-300
         [frame]
             image="Frakcja1/chor.png:100"
         [/frame]
