--- a/units/frakcja2/Wojownik.cfg
+++ b/units/frakcja2/Wojownik.cfg
@@ -95,5 +95,12 @@
 			image="frakcja2/Wojownik-Nic[1~3].png:[100*3]"
 		[/frame]
 	[/idle_anim]
+	
+	[death]
+        start_time=0
+        [frame]
+            image="frakcja2/Wojownik-Śmierć[1~5].png:120"
+        [/frame]
+    [/death]
 
 [/unit_type]
