--- a/units/frakcja1/Chór.cfg
+++ b/units/frakcja1/Chór.cfg
@@ -46,28 +46,15 @@
             image="Frakcja1/chor.png:100"
         [/frame]
         {SOUND:HIT_AND_MISS staff.wav {SOUND_LIST:MISS} -100}
-    [attack_anim]
+    [/attack_anim]
+	[attack_anim]
         [filter_attack]
             name=sing
         [/filter_attack]
-
+        start_time=-300
         [frame]
-            image="frakcja1/chor.png:400"
+            image="Frakcja1/chor.png:100"
         [/frame]
-
-        missile_start_time=-240
-        # due to its sheer size, the dragon NE attack breaths straight north
-        [if]
-            direction=n,ne,nw
-            [missile_frame]
-                image="projectiles/nuty.png~FL():150"
-                image_diagonal="projectiles/nuty.png:150"
-                offset=0.0~1.1
-                directional_x=50~0
-                y=-30~-10
-            [/missile_frame]
-        [/if]
-
-        {SOUND:HIT_AND_MISS {SOUND_LIST:HOLY} {SOUND_LIST:HOLY_MISS} -75}
+        {SOUND:HIT_AND_MISS staff.wav {SOUND_LIST:MISS} -100}
     [/attack_anim]
 [/unit_type]
