--- a/factions/Simple_mod-Simple_race2.cfg
+++ b/factions/Simple_mod-Simple_race2.cfg
@@ -5,6 +5,6 @@
     image=frakcja2/Zagadka.png
     {MAGENTA_IS_THE_TEAM_COLOR}
     type=WDShadow_Warrior2
-    leader=Ares,nic,Zagadka,Zaraza
+    leader=Ares,nic,Zagadka,Zaraza,Fatum
     recruit=nic,Zagadka,Zaraza,Zaraznik,Wojownik
 [/multiplayer_side]
