--- a/units/frakcja2/Fatum.cfg
+++ b/units/frakcja2/Fatum.cfg
@@ -4,11 +4,11 @@
 	race=monster
 	image="frakcja2/Fatum.png"
 	{MAGENTA_IS_THE_TEAM_COLOR}
-	hitpoints=32
-	movement_type=tebfoot
-	movement=5
-	experience=26
-	level=1
+	hitpoints=99
+	movement_type=drakefoot
+	movement=3
+	experience=80
+	level=4
 	alignment=neutral
 	advances_to=null
 	cost=10
