--- a/units/frakcja2/Wojownik.cfg
+++ b/units/frakcja2/Wojownik.cfg
@@ -1,7 +1,7 @@
 [unit_type]
 	id=Wojownik
 	name= _ "Wojownik"
-	race=monster
+	race=human
 	image="frakcja2/Wojownik.png"
 	{MAGENTA_IS_THE_TEAM_COLOR}
 	hitpoints=32
@@ -32,10 +32,10 @@
 		offset=0.0~0.15:100,0.15~0.35:100,0.35~0.45:75,0.45~0.5:100,0.5:20,0.5~0.4:30,0.4~0.2:75,0.2~0.0:75
         start_time=-300
         [frame]
-            image="frakcja2/Wojownik.png:50"
+            image="frakcja2/Wojownik.png:60"
         [/frame]
         [frame]
-            image="frakcja2/Wojownik-Atak[1~4,3,2].png:[50*3,50,50,80]"
+            image="frakcja2/Wojownik-Atak[1~6,5~1].png:[40*6,40*5]"
         [/frame]
         {SOUND:HIT_AND_MISS club.ogg {SOUND_LIST:MISS} -200}
         [frame]
