--- a/factions/Simple_mod-Simple_race.cfg
+++ b/factions/Simple_mod-Simple_race.cfg
@@ -2,9 +2,9 @@
 [multiplayer_side]
     id=WDSimple_race
     name= _ "Edypianie"
-    image=frakcja1/Posel.png
+    image=frakcja1/Dziwy/Bohater.png
     {MAGENTA_IS_THE_TEAM_COLOR}
     type=WDShadow_Warrior2
-    leader=Jokasta,Posel,Artemida,Apollo,Atena
-    recruit=Peasant,Teb,Chor,Posel,Wyrocznia
+    leader=Jokasta,Posel,Artemida,Apollo,Atena,Bohater
+    recruit=PeasantU,Teb,Chor,Posel,Wyrocznia
 [/multiplayer_side]
