--- a/units/frakcja1/Chór.cfg
+++ b/units/frakcja1/Chór.cfg
@@ -10,7 +10,7 @@
     experience=48
     level=1
     alignment=lawful
-    advances_to=null
+    advances_to={AMLA_DEFAULT}
     cost=20
     usage=fighter
     description= _ "Najwybitniejsi Tebanczycy z Teb"
