--- a/units/frakcja1/Posel.cfg
+++ b/units/frakcja1/Posel.cfg
@@ -14,7 +14,7 @@
 	experience=17
 	level=1
 	alignment=lawful
-	advances_to=null
+	advances_to={AMLA_DEFAULT}
 	cost=18
 	die_sound=wail-long.wav
 	usage=fighter
