--- a/units/frakcja1/Thunderer.cfg
+++ b/units/frakcja1/Thunderer.cfg
@@ -11,7 +11,7 @@
     experience=40
     level=1
     alignment=lawful
-    advances_to=null
+    advances_to={AMLA_DEFAULT}
     cost=40
     usage=mixed fighter
     description= _ "."
