--- a/units/frakcja1/Wyrocznia.cfg
+++ b/units/frakcja1/Wyrocznia.cfg
@@ -10,7 +10,7 @@
 	experience=50
 	level=2
 	alignment=neutral
-	advances_to=null
+	advances_to={AMLA_DEFAULT}
 	cost=20
 	die_sound=wail-long.wav
 	usage=mix_fighter
