--- a/units/frakcja2/zagadka.cfg
+++ b/units/frakcja2/zagadka.cfg
@@ -10,7 +10,7 @@
 	experience=17
 	level=0
 	alignment=neutral
-	advances_to=null
+	advances_to={AMLA_DEFAULT}
 	cost=15
 	die_sound=wail-long.wav
 	usage=fighter
