--- a/units/frakcja1/Apollo.cfg
+++ b/units/frakcja1/Apollo.cfg
@@ -4,7 +4,7 @@ id=Sergeant
 [/base_unit]
 id=Apollo
 name=_ "Obraz Apolla"
-advances_to=null
+advances_to={AMLA_DEFAULT}
 hitpoints=30
 level=3
 attacks=3
