--- a/units/frakcja1/Bohater.cfg
+++ b/units/frakcja1/Bohater.cfg
@@ -14,7 +14,7 @@
 	experience=32
 	level=2
 	alignment=lawful
-	advances_to=null
+	advances_to={AMLA_DEFAULT}
 	cost=18
 	die_sound=wail-long.wav
 	usage=fighter
