--- a/units/frakcja1/Lightning_Dragon.cfg
+++ b/units/frakcja1/Lightning_Dragon.cfg
@@ -14,7 +14,7 @@
     experience=200
     level=6
     alignment=lawful
-    advances_to=null
+    advances_to={AMLA_DEFAULT}
     {AMLA_DEFAULT}
     cost=50
     usage=archer
