--- a/units/frakcja1/Saphire_Dragon.cfg
+++ b/units/frakcja1/Saphire_Dragon.cfg
@@ -15,7 +15,7 @@
     experience=100
     level=5
     alignment=lawful
-    advances_to=null
+    advances_to={AMLA_DEFAULT}
     {AMLA_DEFAULT}
     cost=50
     undead_variation=drake
