--- a/units/frakcja1/Wisielec.cfg
+++ b/units/frakcja1/Wisielec.cfg
@@ -10,7 +10,7 @@
 	experience=49
 	level=2
 	alignment=neutral
-	advances_to=null
+	advances_to={AMLA_DEFAULT}
 	cost=35
 	die_sound=wail-long.wav
 	usage=fighter
