--- a/units/frakcja2/Ares.cfg
+++ b/units/frakcja2/Ares.cfg
@@ -4,7 +4,7 @@ id=Sergeant
 [/base_unit]
 id=Ares
 name=_ "Obraz Aresa"
-advances_to=null
+advances_to={AMLA_DEFAULT}
 hitpoints=12
 level=3
 attacks=2
