--- a/units/frakcja2/Fatum.cfg
+++ b/units/frakcja2/Fatum.cfg
@@ -10,7 +10,7 @@
 	experience=80
 	level=4
 	alignment=neutral
-	advances_to=null
+	advances_to={AMLA_DEFAULT}
 	cost=10
 	die_sound=wail-long.wav
 	usage=fighter
