--- a/units/frakcja2/Wojownik.cfg
+++ b/units/frakcja2/Wojownik.cfg
@@ -10,7 +10,7 @@
 	experience=26
 	level=1
 	alignment=neutral
-	advances_to=null
+	advances_to={AMLA_DEFAULT}
 	cost=10
 	die_sound=wail-long.wav
 	usage=fighter
