--- a/units/frakcja2/nic.cfg
+++ b/units/frakcja2/nic.cfg
@@ -10,7 +10,7 @@
     experience=24
     level=1
     alignment=chaotic
-    advances_to=null
+    advances_to={AMLA_DEFAULT}
     cost=14
     usage=fighter
     description= _ "brak"
