--- a/_main.cfg
+++ b/_main.cfg
@@ -10,6 +10,7 @@ path=data/add-ons/Simple_mod
 {~add-ons/Simple_mod/units/units.cfg}
 {~add-ons/Simple_mod/units/frakcja1/}
 {~add-ons/Simple_mod/units/frakcja2/}
+{~add-ons/Simple_mod/units/frakcja3/}
 [/units]
     [lua]
         code=<<
