--- a/Eras.cfg
+++ b/Eras.cfg
@@ -8,6 +8,7 @@ require_era=yes
 {RANDOM_SIDE}
 {~add-ons/Simple_mod/factions/Simple_mod-Simple_race.cfg}
 {~add-ons/Simple_mod/factions/Simple_mod-Simple_race2.cfg}
+{~add-ons/Simple_mod/factions/Simple_mod-Nation.cfg}
 [/era]
 
 [era]
@@ -24,4 +25,5 @@ require_era=yes
 {multiplayer/factions/drakes-default.cfg}
 {~add-ons/Simple_mod/factions/Simple_mod-Simple_race.cfg}
 {~add-ons/Simple_mod/factions/Simple_mod-Simple_race2.cfg}
+{~add-ons/Simple_mod/factions/Simple_mod-Nation.cfg}
 [/era]
