--- a/units/units.cfg
+++ b/units/units.cfg
@@ -59,4 +59,68 @@
             arcane=80
         [/resistance]
     [/movetype]
+	   
 
+   [movetype]
+        name=Skradanie
+
+        [movement_costs]
+			#deep_water=2
+            shallow_water=2
+            reef=2
+            swamp_water=2
+            flat=1
+            sand=1
+            forest=1
+            hills=1
+            mountains=2
+            village=1
+            castle=1
+            cave=2
+            frozen=2
+            fungus=2
+        [/movement_costs]
+
+        [defense]
+			#deep_water=40
+            shallow_water=35
+            reef=35
+            swamp_water=35
+            flat=20
+            sand=25
+            forest=10
+            hills=15
+            mountains=15
+            village=30
+            castle=25
+            cave=30
+            frozen=30
+            fungus=30
+        [/defense]
+
+        [resistance]
+            blade=100
+            pierce=110
+            impact=100
+            fire=100
+            cold=100
+            arcane=100
+        [/resistance]
+    [/movetype]
+
+[race]
+        id=ZHP
+        male_name= _ "race^ZHP"
+        female_name= _ "race+female^Harcereczka"
+        plural_name= _ "race^Harcerze"
+        description= "Członkowie Związku Harcerstwa Polskiego, kiedy gra o chusty wezwała, jak jeden mąż w rzędzie stanęli. Gotowi stracić swe chusty nowe, w imię honoru;"	# wmllint: ignore
+        num_traits=2
+        markov_chain_size=10
+        male_names= _ "Kaszalot,Antek,Witek,Oskar,Wojtek,Filip"
+        female_names= _ "Zośka,Gwardzistka"
+		[unit]
+	{TRAIT_FEARLESS}
+	{TRAIT_DEXTROUS}
+	[/unit]
+    
+[/race]
