--- a/factions/Simple_mod-Nation.cfg
+++ b/factions/Simple_mod-Nation.cfg
@@ -1,10 +1,10 @@
 #textdomain wesnoth-Simple_mod
 [multiplayer_side]
-    id=WDSimple_race2
-    name= _ "Oponenci Edypa"
-    image=frakcja2/Zagadka.png
+    id=WDNation
+    name= _ "Harcerze"
+    image=frakcja3/Harcerz.png
     {MAGENTA_IS_THE_TEAM_COLOR}
     type=WDShadow_Warrior2
-    leader=Ares,nic,Zagadka,Zaraza,Fatum
-    recruit=nic,Zagadka,Zaraza,Zaraznik,Wojownik
+    leader=Flaga
+    recruit=Harcerz,Zuch,Oszust
 [/multiplayer_side]
