--- a/factions/Simple_mod-Nation.cfg
+++ b/factions/Simple_mod-Nation.cfg
@@ -5,6 +5,13 @@
     image=frakcja3/Harcerz.png
     {MAGENTA_IS_THE_TEAM_COLOR}
     type=WDShadow_Warrior2
-    leader=Flaga
-    recruit=Harcerz,Zuch,Oszust
+    random_leader=Flaga
+	leader=Flaga
+	recruit=Harcerz,Zuch,Oszust
+	[modifications]
+	{ABILITY_AMBUSH}
+	{ABILITY_NIGHTSTALK}
+	{TRAIT_STRONG}
+	{TRAIT_QUICK}
+	[/modifications]
 [/multiplayer_side]
