--- a/units/frakcja3/Zuch.cfg
+++ b/units/frakcja3/Zuch.cfg
@@ -20,11 +20,12 @@
 	{ABILITY_AMBUSH}
 	{ABILITY_NIGHTSTALK}
 	[/abilities]
-	
-	[unit]
-	{TRAIT_FEARLESS}
-	{TRAIT_DEXTROUS}
-	[/unit]
+	[modifications]
+	{ABILITY_AMBUSH}
+	{ABILITY_NIGHTSTALK}
+	{TRAIT_STRONG}
+	{TRAIT_QUICK}
+	[/modifications]
         [defense]
 			#deep_water=37
             shallow_water=32
