--- a/units/units.cfg
+++ b/units/units.cfg
@@ -118,9 +118,11 @@
         markov_chain_size=10
         male_names= _ "Kaszalot,Antek,Witek,Oskar,Wojtek,Filip"
         female_names= _ "Zośka,Gwardzistka"
-		[unit]
-	{TRAIT_FEARLESS}
-	{TRAIT_DEXTROUS}
-	[/unit]
+	[modifications]
+	{ABILITY_AMBUSH}
+	{ABILITY_NIGHTSTALK}
+	{TRAIT_STRONG}
+	{TRAIT_QUICK}
+	[/modifications]
     
 [/race]
